--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=Backend
+
+spring.datasource.url = jdbc:mysql://localhost:3306/abclab
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
