--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/abclab
+spring.datasource.url = jdbc:mysql://localhost:3306/Abclabdb
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
